  "obnam mount" to say that each generation is a subdirectory.

* David Fries changed restore to set the group ownership if possible
  even when not root.  No warnings are issued if the attempt fails.

* Jan Niggemann added a little to the German translation of the Obnam
  manual.

* Lars Wirzenius added the path to the error message about a missing
  chunk (R43272X).

Bug fixes:

* The Obnam SFTP plugin would loop infinitely if it lost the
  connection to the SSH server while creating a temporary file. Itamar
  Turner-Trauring provided a fix for this.

* Will Dyson fixed a bug about locking while removing checkpoint
  generations.

* Michel Alexandre Salim fixed a Python 2.6 compatibility problem in
  the unit tests (use of `assertRaises` as a context manager).

* Lars Kruse fixed a bug with backing up of overlapping backup roots
  (e.g., / and /boot), given a test case by Adrien Clerc.

* Thomas Eschenbacher fixed a bug in the format 6 repository code that
  would crash when there is an obscure problem and a B-tree code can't
  be found in the tree.

* Tom Chiverton pointed out that the manual page was using "obnam
  restore" instead of "obnam mount" in an example for "obnam mount".

* The yarn test suite now runs FUSE tests (`obnam mount`) when
  `fusermount` is available, rather than checking for membership in
  the group `fuse`. The latter is a Debianism (fixed in Debian
  `jessie`).

Version 1.8, released 2014-05-13
--------------------------------

* The error message has been improved for when setting metadata
  (owner, permission, and similar) of a restored file fails.

* `obnam force-lock` now works even when the client running it is not
  in the client list.

Security issues:

* Joey Hess found a problem in `obnam restore`: restored files would
  be created with quite liberal default permissions, which would be
  set to the backed-up permissions later. This could allow a snooper
  to read files they shouldn't be. This has been fixed now by using